--- a/index.html
+++ b/index.html
@@ -4,50 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ken Tolman | WDD 130 Assignment Portal</title>
-    <meta name="description" content="This is the assignment home page for WDD 130 at BYU-Idaho.">
+    <title>Course Portal Home Page</title>
+    <meta name="description" content="This is the assignment portal for Ken Tolman - WDD 230 Web Frontend Development at BYU-Idaho.">
   </head>
 
   <body>
     <header>
-      <h1>WDD 130 Assignment Portal</h1>
+      <h1>Ken Tolman</h1>
     </header>
     <main>
-      <h2>Assignment Links</h2>
+      <h2>WDD 230: Assignment Portal</h2>
       <ul>
-        <li>Week 1: <a href="class/aboutme.html">About Me</a></li>
-        <br>
-        <li>Week 2: <a href="class/site-plan.html">Raging River Site Plan</a></li>
-        <br>
-        <li>Week 3: <a href="class/troubleshooting.html">Troubleshooting Activity</a></li>
-        <li>Week 3: <a href="project/">Raging River Rafters</a></li>
-        <br>
-        <li>Week 4: <a href="project/">Raging River Rafters - w/CSS</a></li>
-        <br>
-        <li>Week 5: <a href="project/">Raging River Rafters - w/more CSS</a></li>
-        <br>
-        <li>Week 6: <a href="class/w6-exercise-1.html">Activity: CSS Layout</a></li>
-        <li>Week 6: <a href="class/w6-exercise-1-challenge.html">Activity: CSS Layout - Challenge</a></li>
-        <li>Week 6: <a href="class/w6layoutassignment.html">Assignment: CSS Layout and Positioning</a></li>
-        <br>
-        <li>Week 7: <a href="project/">Assignment: Raging River Rafters - Finished Site Home Page</a></li>
-        <br>
-        <li>Week 9: <a href="project/">Assignment: Raging River Rafters - Completed Rafting Company Site</a></li>
-        <li>Week 9: <a href="final_project/site-plan/">Assignment: Final Project - Site Plan</a></li>
-        <br>
-        <li>Week 10: <a href="class/html_forms.html">Activity: HTML Forms</a></li>
-        <li>Week 10: <a href="final_project/">Activity: Final Web Site Progress</a></li>
-        <br>
-        <li>Week 11: <a href="class/table.html">Activity: Table Build</a></li>
-        <br>
-        <li>Week 12: <a href="class/card.html">Activity: Media Card</a></li>
-        <br>
-        <li>Week 14: <a href="final_project/index.html">Final Project</a></li>
-        <br>
+        <li>Lesson 02: <a href="class/aboutme.html">Assignment Link</a></li>
+        <li>Lesson 03: <a href="class/site-plan.html">Assignment Link</a></li>
+        <li>Lesson 04: <a href="class/troubleshooting.html">Link | Link</a></li>
       </ul>
     </main>
     <footer>
-      &copy;2020 | Ken Tolman | Utah | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+      &copy;2021 | Ken Tolman | Utah | <a href="https://www.byui.edu/online" target="_blank">BYU-Idaho Online Learning</a>
+      <br/>Last Updated: <span id="updated"></span>	
     </footer>
   </body>
 </html>
